# local-rag-assistant

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/systemd/: local-rag-assistant-backup.service  local-rag-assistant-backup.timer  local-rag-assistant.service
scripts/: backup_vectordb.sh  download_wikipedia_zim.sh  init_env.sh  setup_models.sh
src/: ingest.py  kiwix.py  llm.py  logging_config.py  main.py  metrics.py  rag.py  security.py
src/static/: index.html
zabbix/: template_local_rag_assistant_metrics.yaml
